tests/errors/papercut/no-control-no-done.expect
---CODE---
1
---STDERR---
Error: tests/errors/papercut/no-control-no-done.futil
4 |component main(@go go: 1) -> (@done done: 1) {
  |^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [Papercut] Component `main` has an empty control program and does not assign to the done port `done`. Without an assignment to the done port, the component cannot return control flow.
